Fixed Mobile Display Overflow Bug

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -32,7 +32,8 @@ h1 {
 	height: 400px;
 	border-left-style: solid;
 	border-right-style: solid;
-	border-color: rgba(255, 255, 255, 0.1); 
+	border-color: rgba(255, 255, 255, 0.1);
+	overflow-y: scroll;
 }
 
 #weaPlace {
@@ -40,6 +41,7 @@ h1 {
     font-weight: bold;
 	color: lightyellow;
 	height: 400px;
+	overflow-y: scroll;
 }
 
 #weaHead {
